syntax = "proto3";

package runtiva.nats.v1;

import "chat-svc/v1/message/message_inputs.proto";
//import "message.proto";

import "nats/v1/common.proto";

// NATS Specific messages that are used internally on the server-side to offboard request processing 
// from the ChatServer to the backend services. 

// ********** Message_Send ********** //
// Backend NATS messaging for `Message_Send`: Request to send a new message is a specified chat
message NatsMessageSendRequest {
  repeated MetadataMap headers = 1;
  runtiva.chat.v1.MessageSendRequest data = 2;
}

// ********** Message_Read ********** //
// Backend NATS messaging for `Message_Read`: Request to update reads on chat/peer 
message NatsMessageReadRequest {
  repeated MetadataMap headers = 1;
  runtiva.chat.v1.MessageReadRequest data = 2;
}


